--- a/index.html
+++ b/index.html
@@ -1,125 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Login</title>
-<style>
-*{box-sizing:border-box;font-family:"Poppins",Arial,sans-serif}
-body{
-  margin:0;
-  height:100vh;
-  background:linear-gradient(-45deg,#020617,#0f172a,#020617,#020617);
-  background-size:400% 400%;
-  animation:gradientMove 12s ease infinite;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  color:#fff;
-}
-@keyframes gradientMove{
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-.login-card{
-  width:350px;padding:40px 30px;border-radius:18px;
-  background:rgba(15,23,42,.8);backdrop-filter:blur(14px);
-  box-shadow:0 0 40px rgba(56,189,248,.15),inset 0 0 30px rgba(255,255,255,.03);
-  text-align:center;
-}
-h2{
-  font-size:28px;margin-bottom:10px;
-  background:linear-gradient(to right,#38bdf8,#22c55e);
-  -webkit-background-clip:text;-webkit-text-fill-color:transparent
-}
-p{font-size:14px;color:#94a3b8;margin-bottom:25px}
-.input-box{margin-bottom:18px}
-.input-box input{
-  width:100%;height:48px;padding:14px;border-radius:10px;
-  border:1px solid #1e293b;background:#020617;color:#fff;font-size:14px;
-  outline:none;transition:border-color 0.3s ease, box-shadow 0.3s ease;
-}
-.input-box input:hover{
-  border-color:#38bdf8;box-shadow:0 0 8px rgba(56,189,248,0.5);
-}
-button{
-  width:100%;height:48px;margin-top:6px;border-radius:10px;border:none;
-  font-size:14px;font-weight:600;
-  background:linear-gradient(135deg,#38bdf8,#22c55e,#38bdf8);
-  background-size:200% 200%;color:#020617;cursor:pointer;transition:all 0.35s ease;
-}
-button:hover{
-  background-position:right center;transform:translateY(-3px);
-  box-shadow:0 12px 30px rgba(34,197,94,0.45);
-}
-button:active{transform:scale(0.96)}
-.register-btn{
-  margin-top:12px;background:transparent;border:1px solid #38bdf8;color:#38bdf8;
-}
-.register-btn:hover{
-  background:#38bdf8;color:#020617;box-shadow:0 0 15px rgba(56,189,248,0.5);
-}
-.links{margin-top:16px;font-size:13px;}
-.links a{color:#94a3b8;text-decoration:none;cursor:pointer;}
-.links a:hover{color:#38bdf8;text-decoration:underline;}
-</style>
+    <meta charset="UTF-8">
+    <title>Happy Valentine 💖</title>
+
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            background-color: lightblue;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .rectangle-box {
+            background-color: white;
+            padding: 30px;
+            width: 320px;
+            border-radius: 12px;
+            text-align: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+
+        img {
+            width: 140px;
+            margin-top: 15px;
+            border-radius: 10px;
+        }
+
+        /* Switch */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+            margin: 10px 0;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            inset: 0;
+            background-color: #ccc;
+            transition: 0.4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: 0.4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: hotpink;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
+
+        /* Letter Style */
+        .letter {
+            display: none;
+            margin-top: 20px;
+            background: #fffaf0;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: left;
+            font-family: "Georgia", serif;
+            line-height: 1.6;
+            animation: fadeIn 1.2s ease;
+            box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        .letter h3 {
+            text-align: center;
+            color: crimson;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+    </style>
 </head>
 
 <body>
-<div class="login-card">
-  <!-- LOGIN FORM -->
-  <div id="loginForm">
-    <h2>Welcome</h2>
-    <p>Sign in to continue</p>
-    <div class="input-box">
-      <input id="loginUser" placeholder="Username">
-    </div>
-    <div class="input-box">
-      <input id="loginPass" type="password" placeholder="Password">
-    </div>
-    <button onclick="login()">Login</button>
-    <button class="register-btn" onclick="showRegister()">Register</button>
-    <div class="links">
-      <a onclick="showReset()">Forgot password?</a>
-    </div>
-  </div>
 
-  <!-- REGISTER FORM -->
-  <div id="registerForm" style="display:none">
-    <h2>Create Account</h2>
-    <p>Register to continue</p>
-    <div class="input-box">
-      <input id="regUser" placeholder="Username">
-    </div>
-    <div class="input-box">
-      <input id="regEmail" placeholder="Email">
-    </div>
-    <div class="input-box">
-      <input id="regPass" type="password" placeholder="Password">
-    </div>
-    <button onclick="register()">Submit</button>
-    <div class="links">
-      <a onclick="showLogin()">Back to Login</a>
-    </div>
-  </div>
+    <h1>Happy Valentine's Day jyo 💕</h1>
 
-  <!-- RESET PASSWORD FORM -->
-  <div id="resetForm" style="display:none">
-    <h2>Reset Password</h2>
-    <p>Enter username and new password</p>
-    <div class="input-box">
-      <input id="resetUser" placeholder="Username">
-    </div>
-    <div class="input-box">
-      <input id="resetPass" type="password" placeholder="New Password">
-    </div>
-    <button onclick="resetPassword()">Reset</button>
-    <div class="links">
-      <a onclick="showLogin()">Back to Login</a>
-    </div>
-  </div>
-</div>
+    <div class="rectangle-box">
+        <h2>Do you love me? 🥺</h2>
+        <p>Do you agree?</p>
 
-<script src="/main.js"></script>
+        <label class="switch">
+            <input type="checkbox" id="yes" onclick="showLetter()">
+            <span class="slider"></span>
+        </label>
+
+        <div class="letter" id="loveLetter">
+            <h3>💌 My Love</h3>
+            <p>
+                I don’t know where to start, but I just want to say how lucky I am to have you in my life.
+                You are not just my best friend, you are my comfort place, my biggest supporter,
+                and the person who understands me even when I don’t say anything. 
+                Life feels easier and happier because you are part of it.
+            </p>
+            <p>
+             Thank you for standing by me during my good times and especially during my difficult moments. 
+                Your words always give me strength, and your presence makes everything feel better. 
+                The memories we created together, the laughs we shared, and even the silly fights we had are very special to me.
+            </p>
+            <p>
+                I may not say it often, but you truly mean a lot to me.
+                I promise to always stand beside you, support you, and cherish our friendship forever.
+                No matter where life takes us, you will always have a special place in my heart.
+            </p>
+            <p style="text-align:right;">
+                Forever yours ❤️<br>
+                <b>— Your Valentine Chand</b>
+            </p>
+        </div>
+
+        <img src="https://png.pngtree.com/png-clipart/20230916/original/pngtree-cartoon-girl-and-friend-clipart-vector-png-image_12251196.png">
+    </div>
+
+    <script>
+        function showLetter() {
+            document.getElementById("loveLetter").style.display = "block";
+        }
+    </script>
+
 </body>
 </html>
+
